Added - utf8encryptor to encrypt password as bytes and text. Unit tests as well.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Common.Core/obj/Debug/*.cache
 /Common.Core/bin
 /Common.Core/obj
+/Common.Core.UnitTests/bin
+/Common.Core.UnitTests/obj
+/Common.Core/*.user
