--- a/Common.Core/Common.Core.csproj
+++ b/Common.Core/Common.Core.csproj
@@ -50,6 +50,9 @@
     <Compile Include="Exceptions\InvalidPathException.cs" />
     <Compile Include="Exceptions\InvalidStatementException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRepositoryBase.cs" />
+    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="Repository\RepositoryBase.cs" />
     <Compile Include="Validation\Validator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
